--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Super Mario</title>
+    <link rel="stylesheet" href="style.css" />
     <script type="module" src="./js/main.js"></script>
   </head>
   <body>
